--- a/allColours/index.html
+++ b/allColours/index.html
@@ -1,28 +1,55 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <style>
-      body {
-        padding: 0;
-        margin: 0;
-        background-color: ivory;
-      }
+	<head>
+		<meta charset="utf-8" />
+		<style>
+			body {
+				padding: 0;
+				margin: 0;
+				background-color: ivory;
+			}
 
-      canvas {
-        padding: 0;
-        margin: auto;
-        display: block;
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        box-shadow: 5px 5px 25px #444;
-      }
-    </style>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/p5.js"></script>
-    <script src="sketch.js"></script>
-  </head>
-  <body></body>
+			canvas {
+				padding: 0;
+				margin: auto;
+				display: block;
+				position: absolute;
+				top: 0;
+				bottom: 0;
+				left: 0;
+				right: 0;
+				box-shadow: 5px 5px 25px #444;
+			}
+
+			button {
+				display: block;
+				margin: 10vh auto 0;
+				background-color: #7F96FF;
+				border: none;
+				color: white;
+				padding: 15px 32px;
+				text-align: center;
+				text-decoration: none;
+				font-size: 16px;
+				box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2), 0 1px 5px 0 rgba(0,0,0,0.19)
+			}
+
+			button:hover {
+				background-color: #7F96DD;
+			}
+
+			p {
+				text-align: center;
+				color: #444;
+				font-style: italic;
+				margin-top: 1cm;
+			}
+		</style>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.js"></script>
+		<script src="sketch.js"></script>
+	</head>
+	<body>
+		<p>This app generates an image of all unique rgb() colour combinations using a backtracking algorithm to deposit pixels along a random path.</p>
+		<p>Double click anywhere to save a .png image of the generation!</p>
+	</body>
 </html>
